style-bs.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html, body {
  height: 100%;
  width: 100%;
  color: #222;
}

input {
	margin-left: 20px;
	padding: none;
}

h4 {
	margin-left: 20px;
	padding: none;
}


p {
	margin-left: 20px;
	padding: none;
}

button {
	margin-left: 20px;
	margin-bottom: 20px;
	padding: none;
}

.navbar {
  padding: 8px;
}

.navbar-nav li {
  padding-right: 10px;
}
.nav-link {
  font-size: 1.1em !important;
}

.padding {
  padding-bottom: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
}

.welcome {
  width: 75%;
  margin: 0 auto;
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.container {
    position: relative;
    width: 50%;
}

.image {
    opacity: 1;
    display: block;
    width: 100%;
    height: auto;
    position: center;
    transition: .5s ease;
    backface-visibility: hidden;
}

.middle {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform:
    translate(-50%, -50%);
    text-align: center;
}

.container:hover .image {
    opacity: 0.3;
}

.container:hover .middle {
    opacity: 1;
}

.middle:hover .text {
    background-color: pink;
    color: black;
    font-family: 'Comic Sans MS', sans-serif; 
    font-size: 16px;
    padding: 10px 20px;
}


footer {
  background-color: #3f3f3f;
  color: #d5d5d5;
  padding-top: 1px;
  height: 7%
}

form {
  padding-left: 2rem;
}

/*--- Stress Calculator ---*/
.a {
  font-size: 20px;
}

.para_stress {
  padding-left: 6rem;
  padding-right: 6rem;
  padding-top: -80px;
  padding-bottom: 40px;
}

.button {
  padding-left: 50px;
}

/*---Media Queries --*/
@media (max-width: 992px) {

  }
@media (max-width: 768px) {
  
}
@media (max-width: 576px) {
  
}


/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Fixed Background Image --*/
figure {
  position: relative;
  width: 100%;
  height: 60%;
  margin: 0!important;
}
.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url(sunrisephoto.jpg);
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}

/* -- Background Image -- */
.header0 {
  background:url(photo0.jpeg) no-repeat center;
  height: 450px;
}

.header1 {
  background:url(photo1.jpeg) no-repeat center;
  height: 450px;
}

.header2 {
  background:url(photo2.jpg) no-repeat center;
  height: 450px;
}

.header3 {
  background:url(photo3.jpg) no-repeat center;
  height: 450px;
}



/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

